syntax = "proto3";
package rental;
import "google/api/annotations.proto";

option go_package = "coolcar/rental/api/gen/v1;rentalpb";


message CreateTripRequest {
  string start = 1;
}

message CreateTripResponse{

}

service TripService{
  rpc CreateTrip (CreateTripRequest) returns (CreateTripResponse){
    option (google.api.http) = {
      post: "/v2/trip/create"
      body: "*"
    };
  };
}